[package]
name = "slack_client"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2018"

[[bin]]
name = "show_identity"
path = "src/bin/show_identity.rs"

[dependencies]
futures = "~0.3.12"
http = "~0.2.3"
hyper = "~0.14.4"
hyper-tls = "~0.5.0"
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.26"
tokio = { version = "~1.2.0", features = ["full"] }
url = "~2.2.0"
