[package]
name = "slack_client"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2018"

[[bin]]
name = "show_identity"
path = "src/bin/show_identity.rs"

[[bin]]
name = "list_conversations"
path = "src/bin/list_conversations.rs"

[dependencies]
futures = "~0.3.12"
http = "~0.2.3"
hyper = { version = "~0.14.4", features = ["client", "http1", "runtime", "stream", "tcp"] }
hyper-tls = "~0.5.0"
serde = { version = "1.0.76", features = ["derive"] }
serde_json = "1.0.26"
tokio = { version = "~1.2.0", features = ["full"] }
url = "~2.2.0"
