[package]
name = "slack_client"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2018"

[dependencies]
anyhow = "~1.0.38"
form_urlencoded = "~1.0.0"
futures = "~0.3.12"
http = "~0.2.3"
hyper = { version = "~0.14.4", features = ["client", "http1", "runtime", "stream", "tcp"] }
hyper-tls = "~0.5.0"
regex = "~1.4.3"
serde = { version = "1.0.76", features = ["derive"] }
serde_json = "1.0.26"
tokio = { version = "~1.2.0", features = ["full"] }
tungstenite = "~0.13.0"
tokio-tungstenite = { version = "~0.13.0", features = ["tls"] }
url = "~2.2.0"
